<resources>
    <string name="app_name">Green Dome</string>
    <string name="fajr_time">Fajr</string>
    <string name="sunrise_time">Sunrise</string>
    <string name="zuhr_time">Zuhr</string>
    <string name="sunset_time">Sunset</string>
    <string name="maghrib_time">Maghrib</string>
    <string name="fajr_calculated"></string>
    <string name="sunrise_calculated"></string>
    <string name="zuhr_calculated"></string>
    <string name="sunset_calculated"></string>
    <string name="mahgrib_calculated"></string>
    <string name="user_feedback_string">Not getting a response? Try checking the location name for errors</string>
    <string name="counter_label">Current</string>
    <string name="counter_response">0</string>
    <string name="about_text">About</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_page_1">Text</string>
    <string name="title_activity_reminders">RemindersActivity</string>
    <string name="tab_text_1">Reminders</string>
    <string name="tab_text_2">To-Do List</string>
</resources>