<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mosque_background"
    android:theme="@style/DatePickerStyle"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ManualSalahClockActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Salah Clock"
            android:textColor="#2d3436"
            android:textSize="55sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/date_select_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/date_select_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Select Date"
            android:textColor="#000000"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/date_pick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <DatePicker
            android:id="@+id/date_pick"
            style="@style/DatePickerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_select_label" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:hint="Select Location"
            android:inputType="textPostalAddress"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHighlight="@android:color/holo_blue_dark"
            android:textColorHint="#333333"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textCursorDrawable="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toTopOf="@+id/get_info_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_pick" />

        <Button
            android:id="@+id/get_info_button"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/salah_clock_textview"
            android:fontFamily="@font/source_sans_pro"
            android:text="Get Salah Time Information"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fajr_time_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />

        <TextView
            android:id="@+id/fajr_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/fajr_time"
            android:textAlignment="center"
            android:textColor="#2D3436"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sunrise_time_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_info_button" />

        <TextView
            android:id="@+id/sunrise_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/sunrise_time"
            android:textAlignment="center"
            android:textColor="#2D3436"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/zuhr_time_text"
            app:layout_constraintStart_toStartOf="@+id/fajr_time_text"
            app:layout_constraintTop_toBottomOf="@+id/fajr_time_text" />

        <TextView
            android:id="@+id/zuhr_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/zuhr_time"
            android:textAlignment="center"
            android:textColor="#2D3436"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sunset_time_text"
            app:layout_constraintStart_toStartOf="@+id/sunrise_time_text"
            app:layout_constraintTop_toBottomOf="@+id/sunrise_time_text" />

        <TextView
            android:id="@+id/sunset_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/sunset_time"
            android:textAlignment="center"
            android:textColor="#2D3436"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/maghrib_time_text"
            app:layout_constraintStart_toStartOf="@+id/zuhr_time_text"
            app:layout_constraintTop_toBottomOf="@+id/zuhr_time_text" />

        <TextView
            android:id="@+id/maghrib_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/maghrib_time"
            android:textAlignment="center"
            android:textColor="#2D3436"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/user_feedback"
            app:layout_constraintStart_toStartOf="@+id/sunset_time_text"
            app:layout_constraintTop_toBottomOf="@+id/sunset_time_text"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/fajr_time_response"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/fajr_calculated"
            android:textAlignment="center"
            android:textColor="#e17055"
            android:textSize="42sp"
            app:layout_constraintBottom_toTopOf="@+id/sunrise_time_response"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_info_button" />

        <TextView
            android:id="@+id/sunrise_time_response"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/sunrise_calculated"
            android:textAlignment="center"
            android:textColor="#e17055"
            android:textSize="42sp"
            app:layout_constraintBottom_toTopOf="@+id/zuhr_time_response"
            app:layout_constraintEnd_toEndOf="@+id/fajr_time_response"
            app:layout_constraintTop_toBottomOf="@+id/fajr_time_response" />

        <TextView
            android:id="@+id/zuhr_time_response"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/zuhr_calculated"
            android:textAlignment="center"
            android:textColor="#e17055"
            android:textSize="42sp"
            app:layout_constraintBottom_toTopOf="@+id/sunset_time_response"
            app:layout_constraintEnd_toEndOf="@+id/sunrise_time_response"
            app:layout_constraintTop_toBottomOf="@+id/sunrise_time_response" />

        <TextView
            android:id="@+id/sunset_time_response"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/sunset_calculated"
            android:textAlignment="center"
            android:textColor="#e17055"
            android:textSize="42sp"
            app:layout_constraintBottom_toTopOf="@+id/maghrib_time_response"
            app:layout_constraintEnd_toEndOf="@+id/zuhr_time_response"
            app:layout_constraintTop_toBottomOf="@+id/zuhr_time_response" />

        <TextView
            android:id="@+id/maghrib_time_response"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/mahgrib_calculated"
            android:textAlignment="center"
            android:textColor="#e17055"
            android:textSize="42sp"
            app:layout_constraintBottom_toTopOf="@+id/user_feedback"
            app:layout_constraintEnd_toEndOf="@+id/sunset_time_response"
            app:layout_constraintTop_toBottomOf="@+id/sunset_time_response"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/user_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/user_feedback_string"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/adhan_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maghrib_time_text"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/adhan_button"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/salah_clock_textview"
            android:fontFamily="@font/roboto"
            android:onClick="playAdhan"
            android:text="Adhan: Play / Pause"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_feedback" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/salah_clock_textview"
            android:fontFamily="@font/roboto"
            android:text="Back"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adhan_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>